--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroud_color"
-    tools:context=".MainActivity">
+    tools:context=".Activitis.MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -134,7 +134,7 @@
                             android:layout_height="34dp"
                             android:layout_gravity="center"
                             android:src="@drawable/wind"
-                            /> <!--!!-->
+                            /> <!--풍속-->
 
                         <TextView
                             android:id="@+id/textView7"
@@ -236,11 +236,10 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:paddingStart="24dp"
-                android:paddingEnd="24dp"
-                />
+                android:paddingEnd="24dp" />
 
         </LinearLayout>
     </ScrollView>
