--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
 
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimaryDark">@color/backgroud_color</item>
     </style>
 
     <style name="Theme.Test" parent="Base.Theme.Test" />
