--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                 android:layout_height="150dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/cloudy_sunny"
+                app:srcCompat="@drawable/cloudy_sunny"
                 />
 
             <TextView
@@ -55,7 +55,7 @@
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textColor="@color/text_color"
-                android:textSize="63dp"
+                android:textSize="63sp"
                 />
 
             <TextView
@@ -93,12 +93,12 @@
 
                         <ImageView
                             android:id="@+id/imageView1"
-                            android:layout_width="34dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="34dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/rain"
+                            app:srcCompat="@drawable/rain"
 
-                        /> <!--!!-->
+                            /> <!--!!-->
 
                         <TextView
                             android:id="@+id/textView5"
@@ -116,7 +116,7 @@
                             android:text="Rain"
                             android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -133,7 +133,7 @@
                             android:layout_width="34dp"
                             android:layout_height="34dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/wind"
+                            app:srcCompat="@drawable/windy"
                             /> <!--풍속-->
 
                         <TextView
@@ -152,7 +152,7 @@
                             android:text="Wind Speed"
                             android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -169,7 +169,7 @@
                             android:layout_width="34dp"
                             android:layout_height="34dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/humidity"
+                            app:srcCompat="@drawable/humidity"
                             />
 
                         <TextView
@@ -188,7 +188,7 @@
                             android:text="Humiditly"
                             android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
