--- a/app/src/main/res/layout/viewholder_hourly.xml
+++ b/app/src/main/res/layout/viewholder_hourly.xml
@@ -27,7 +27,8 @@
             android:layout_height="45dp"
             android:layout_gravity="center"
             android:layout_margin="8dp"
-            android:src="@drawable/cloudy_sunny"
+            app:srcCompat="@drawable/cloudy_sunny"
+
             />
 
         <TextView
