--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="backgroud_color">#F3E9FE</color> <!--def the color u want-->
+    <color name="backgroud_color">#F3E9FE</color>
     <color name="text_color">#331866</color>
 </resources>
