--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="backgroud_color">#F3E9FE</color>
     <color name="text_color">#331866</color>
+    <color name="pink">#FF99FF</color>
 </resources>
