--- a/app/src/main/res/layout/activity_intro_page.xml
+++ b/app/src/main/res/layout/activity_intro_page.xml
@@ -6,12 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".Intro_page"
     android:background="@drawable/bluesky"
+    android:orientation="vertical"
     >
 
+    <ImageButton
+        android:id="@+id/weather_btn"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="50dp"
+        app:srcCompat="@drawable/gradient_background_banner"
+        android:background="@null"
+        />
+    <ImageButton
+        android:id="@+id/mat_btn"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="50dp"
+        app:srcCompat="@drawable/gradient_background_banner"
+        android:background="@null"
+        />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Welcome" />
+
 </LinearLayout>
+
+<!--위는 날씨 추천 아래는 소재  +  게시판 -->
