--- a/app/src/main/res/drawable/gradient_background_banner.xml
+++ b/app/src/main/res/drawable/gradient_background_banner.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <gradient android:startColor="#E5BA98" android:centerColor="#CA3BD6" android:endColor="#B224F0"
+        <gradient android:startColor="#30FFFFFF"
             android:angle="45"/>
         <corners android:radius="20dp"/>
     </shape>
