--- a/app/src/main/res/layout/activity_hello_page.xml
+++ b/app/src/main/res/layout/activity_hello_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pinkbackgroundcloud"
+    android:background="@drawable/bluebackground"
     tools:context=".MainActivity">
 
     <ScrollView
