--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,18 +8,17 @@
     android:layout_gravity="center_vertical"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:background="@drawable/pinkbackgroundcloud"
+    android:background="#FFFFFF"
     >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="302dp"
         android:layout_height="wrap_content"
-        android:text="WELCOME"
         android:layout_marginStart="55dp"
-        android:textSize="60sp"
         android:layout_marginTop="100dp"
-        android:textStyle="bold|italic"
-        />
+        android:text="  뽀송뽀송"
+        android:textSize="60sp"
+        android:textStyle="bold|italic" />
 
     <EditText
         android:id="@+id/login_email"
