--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -17,7 +17,13 @@
         android:layout_marginStart="50dp"
         app:srcCompat="@drawable/gradient_background_banner"
         android:background="@null"
+        android:text="LOGIN"
+        android:textSize="15dp"
+        android:textStyle="bold"
+
         />
+
+
     <ImageButton
         android:id="@+id/mat_btn"
         android:layout_width="300dp"
@@ -27,6 +33,7 @@
         app:srcCompat="@drawable/gradient_background_banner"
         android:background="@null"
         />
+
 
 
 </LinearLayout>
