--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -43,13 +43,12 @@
     <Button
         android:id="@+id/login_success"
         android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="260dp"
         android:layout_marginTop="-90dp"
         android:text="LOGIN"
         android:textSize="15dp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/login_signup"
