--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -5,33 +5,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Intro_page"
-    android:background="@drawable/bluesky"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     >
 
-    <ImageButton
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="135dp"
+        android:layout_height="100dp"
+
+        android:layout_marginTop="20dp"
+        app:srcCompat="@drawable/logo" />
+
+    <Button
         android:id="@+id/weather_btn"
         android:layout_width="300dp"
         android:layout_height="150dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginStart="50dp"
-        app:srcCompat="@drawable/gradient_background_banner"
-        android:background="@null"
-        android:text="LOGIN"
-        android:textSize="15dp"
+        android:layout_gravity="center"
+
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#81F7D8"
+        android:text="날씨 추천"
+        android:textSize="50sp"
         android:textStyle="bold"
 
         />
 
-
-    <ImageButton
+    <Button
         android:id="@+id/mat_btn"
         android:layout_width="300dp"
         android:layout_height="150dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginStart="50dp"
-        app:srcCompat="@drawable/gradient_background_banner"
-        android:background="@null"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
+        android:backgroundTint="#81F7D8"
+        android:text="소재 및 게시판"
+        android:textSize="35sp"
+        android:textStyle="bold"
         />
 
 
