--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -1,63 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
     android:background="#FFFFFF"
-    >
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="302dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="100dp"
-        android:text="  뽀송뽀송"
-        android:textSize="60sp"
-        android:textStyle="bold|italic" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        app:srcCompat="@drawable/logo" />
 
     <EditText
         android:id="@+id/login_email"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
+        android:layout_height="50dp"
+        android:layout_marginTop="35dp"
+        android:layout_gravity="center"
+        android:ems="15"
         android:hint="EMAIL"
-        android:layout_marginTop="180dp"
-        android:inputType="textEmailAddress"
-        />
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/login_pwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="15"
         android:hint="Password"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="25dp"
         tools:layout_editor_absoluteY="400dp" />
 
     <Button
         android:id="@+id/login_success"
-        android:layout_width="100dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="260dp"
-        android:layout_marginTop="-90dp"
+        android:backgroundTint="#81F7D8"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:text="LOGIN"
         android:textSize="15dp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/login_signup"
-        android:layout_marginStart="260dp"
-        android:layout_width="100dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:backgroundTint="#81F7D8"
         android:text="signup" />
-
-
 
 
 </LinearLayout>
