--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bluesky"
+
     android:orientation="vertical"
     tools:context=".Hello_page">
 
@@ -16,24 +16,15 @@
         android:layout_height="736dp"
         android:background="@null"
         android:textAlignment="center"
+
         app:srcCompat="@null" />
 
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="400dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="-400dp"
-        android:text="Welcome"
-        android:textColor="@color/backgroud_color"
-        android:textSize="80dp"
-        android:textStyle="bold" />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:layout_marginTop="-500dp"
+        app:srcCompat="@drawable/logo" />
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="400dp"
-        android:layout_height="100dp"
-        android:text="  press anywhere to get login"
-        android:textSize="30dp"
-        android:layout_marginTop="250dp"
-        android:textColor="@color/pink"/>
+
 </LinearLayout>
