--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -1,9 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".board">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/homeinboard"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:onClick="onPropertyButtonClick"
+        app:srcCompat="@drawable/baseline_home_24" />
+
+    <Button
+        android:id="@+id/goboardex"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_weight="1"
+        android:onClick="onPropertyButtonClick"
+        android:text="빨래 방법"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="300dp"
+        android:textsize="20sp"/>
+
+    <Button
+        android:id="@+id/propertyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="50dp"
+        android:layout_weight="1"
+        android:text="소재" />
+
+    <Button
+        android:id="@+id/buttonContainer"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:onClick="onPropertyButtonClick"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="150dp"
+        android:layout_weight="1"
+        android:text="      선택하기    " />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginTop="180dp"
+        android:id="@+id/recycler"
+        app:layoutMannager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="목록이 비어있습니다!"
+        android:id="@+id/empty"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16sp"
+        android:id="@+id/addNote"
+        android:src="@drawable/baseline_add_24"/>
+
+</RelativeLayout>
