게시판 생성 중

--- a/app/src/main/res/layout/activity_board_more.xml
+++ b/app/src/main/res/layout/activity_board_more.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".board_new">
+    tools:context=".board_more">
     <?xml version="1.0" encoding="utf-8"?>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
