--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -7,47 +7,50 @@
     android:layout_gravity="center_vertical"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:background="@drawable/pinkbackgroundcloud"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SGINUP PAGE"
-        android:layout_marginStart="55dp"
-        android:textSize="60sp"
-        android:layout_marginTop="100dp"
-        android:textStyle="bold|italic"
-        />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="184dp"
+        android:layout_marginTop="50dp"
+        app:srcCompat="@drawable/signuplogo" />
 
     <EditText
         android:id="@+id/login_email"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
+        android:layout_height="50dp"
+        android:layout_marginTop="70dp"
+        android:layout_gravity="center"
+        android:ems="15"
         android:hint="EMAIL"
-        android:layout_marginTop="180dp"
-        android:inputType="textEmailAddress"
-        />
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/login_pwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="15"
         android:hint="Password"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="25dp"
         tools:layout_editor_absoluteY="400dp" />
 
 
 
+
     <Button
         android:id="@+id/login_signup"
-        android:layout_marginStart="260dp"
-        android:layout_width="100dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:backgroundTint="#81F7D8"
         android:text="signup" />
+
+
 
 
 </LinearLayout>
