게시판 수정

--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -17,34 +17,32 @@
         app:srcCompat="@drawable/baseline_home_24" />
 
 
-    <Button
-        android:id="@+id/propertyButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="100dp"
-        android:layout_weight="1"
-        android:backgroundTint="#D8D8D8"
-        android:text="소재"
-        android:textColor="#000000" />
+    <EditText
+        android:id="@+id/search"
+        android:layout_width="305dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="22dp"
+        android:ems="15"
+        android:hint="search"
+        android:inputType="text" />
 
-    <Button
-        android:id="@+id/buttonContainer"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="100dp"
+    <ImageView
+        android:id="@+id/readingglasses"
+        android:layout_width="40dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="335dp"
+        android:layout_marginTop="20dp"
         android:layout_weight="1"
-        android:backgroundTint="#D8D8D8"
         android:onClick="onPropertyButtonClick"
-        android:text="      선택하기    "
-        android:textColor="#000000" />
+        app:srcCompat="@drawable/baseline_search_24" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="180dp"
+        android:layout_height="509dp"
+        android:layout_marginTop="150dp"
         app:layoutMannager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
