--- a/app/src/main/res/drawable/gradient_background_banner.xml
+++ b/app/src/main/res/drawable/gradient_background_banner.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <shape android:shape="rectangle">
-        <gradient android:startColor="#30FFFFFF"
-            android:angle="45"/>
-        <corners android:radius="20dp"/>
-    </shape>
-</item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#30ffffff" /> <!-- 민트색으로 변경 -->
+            <corners android:radius="20dp"/>
+        </shape>
+    </item>
 </selector>
 
-<!--gradation express-->
+    <!--gradation express-->
