--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -1,6 +1,6 @@
 <!-- rounded_button.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#81F7D8" /> <!-- 버튼 배경색 -->
+    <solid android:color="#01DFA5" /> <!-- 버튼 배경색 -->
     <corners android:radius="17dp" /> <!-- 모서리의 반지름, 필요에 따라 조절하세요 -->
 </shape>
