--- a/app/src/main/res/layout/activity_board_more.xml
+++ b/app/src/main/res/layout/activity_board_more.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".board_more">
     <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -57,7 +57,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/contentET"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="243dp"
                 android:inputType="textCapSentences|textMultiLine" />
         </com.google.android.material.textfield.TextInputLayout>
 
