--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -31,4 +31,16 @@
         android:layout_marginBottom="16sp"
         android:src="@drawable/baseline_add_24" />
 
+    <ImageView
+
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="304dp"
+        android:layout_marginBottom="18dp"
+        android:src="@drawable/logo" />
+
 </RelativeLayout>
