--- a/app/src/main/res/layout/add_note_dialog.xml
+++ b/app/src/main/res/layout/add_note_dialog.xml
@@ -36,4 +36,16 @@
             android:layout_height="201dp"
             android:inputType="textCapSentences|textMultiLine" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <ImageView
+
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="304dp"
+        android:layout_marginBottom="18dp"
+        android:src="@drawable/logo" />
 </RelativeLayout>
