--- a/app/src/main/res/layout/board_list.xml
+++ b/app/src/main/res/layout/board_list.xml
@@ -22,7 +22,7 @@
             android:text="번호"
             android:textStyle="bold"
             android:textSize="16sp"
-            android:textColor="?attr/colorPrimary"/>
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/notenterfield1"
@@ -78,6 +78,18 @@
             android:text="아이디"
             android:textSize="16sp"
             android:layout_marginStart="16dp"/>
+
+        <ImageView
+
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="16sp"
+            android:layout_marginEnd="304dp"
+            android:layout_marginBottom="18dp"
+            android:src="@drawable/logo" />
 
     </RelativeLayout>
 
