--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -9,35 +9,55 @@
     android:layout_marginEnd="5sp"
     android:layout_marginTop="4sp"
     android:layout_marginBottom="2sp">
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80sp"
+        android:layout_height="match_parent"
         android:padding="10sp">
+
 
         <TextView
             android:id="@+id/list_item_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5sp"
-            android:text="@string/app_name"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:layout_marginStart="5sp"
+            android:layout_marginTop="5sp"
+            android:layout_marginEnd="5sp"
+            android:layout_marginBottom="5sp"
             android:singleLine="true"
-            android:textColor="?attr/colorPrimary"/>
-        
+            android:text="@string/app_name"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <TextView
+            android:id="@+id/list_item_subtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/list_item_title"
-            android:id="@+id/list_item_subtitle"
             android:layout_marginStart="5sp"
             android:layout_marginEnd="5sp"
             android:singleLine="true"
-            android:text="@string/app_name"/>
+            android:text="@string/app_name" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+        <ImageView
+
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="16sp"
+            android:layout_marginEnd="304dp"
+            android:layout_marginBottom="18dp"
+            android:src="@drawable/logo" />
 
 
     </RelativeLayout>
+
 
 </androidx.cardview.widget.CardView>
