--- a/app/src/main/res/layout/board_list.xml
+++ b/app/src/main/res/layout/board_list.xml
@@ -20,7 +20,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="번호"
-            android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="#000000"/>
 
@@ -30,9 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/list_item_bnum"
             android:text=" | "
-            android:textStyle="bold"
             android:textSize="16sp"
-            android:textColor="?attr/colorPrimary"/>
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/list_item_material"
@@ -41,7 +39,7 @@
             android:layout_toEndOf="@id/notenterfield1"
             android:text="소재"
             android:textSize="16sp"
-            android:layout_marginStart="16dp"/>
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/noteneterfield2"
@@ -50,7 +48,7 @@
             android:layout_toEndOf="@id/list_item_material"
             android:text=" | "
             android:textSize="16sp"
-            android:layout_marginStart="16dp"/>
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/list_item_title"
@@ -59,7 +57,7 @@
             android:layout_toEndOf="@id/noteneterfield2"
             android:text="제목"
             android:textSize="16sp"
-            android:layout_marginStart="16dp"/>
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/noteneterfield3"
@@ -68,7 +66,7 @@
             android:layout_toEndOf="@id/list_item_title"
             android:text=" | "
             android:textSize="16sp"
-            android:layout_marginStart="16dp"/>
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/list_item_writerid"
@@ -77,7 +75,7 @@
             android:layout_toEndOf="@id/noteneterfield3"
             android:text="아이디"
             android:textSize="16sp"
-            android:layout_marginStart="16dp"/>
+            android:textColor="#000000"/>
 
     </RelativeLayout>
 
